
  * Changed the server allocator to assign new partitions to servers using
    a weighted random scheme, taking into a account the load facotr and the
    number of available bytes on disk for each server

  * Added the evqlslap benchmark and load testing tool

  * Added a new monitor thread that publishes disk usage and other load
    information to the coordination service

  * Added new frames to native protocol: ACK, INSERT, REPL_INSERT

  * Added the following new configuration options: server.disk_capacity,
    server.load_limit_{soft,hard}, server.partitions_loading_limit_{soft,hard},
    server.loadinfo_publish_interval, server.noalloc


EventQL v0.4.0 beta;

  * Changed the parallel GROUP BY operation to use the new native protocol and
    to schedule all remote partial group bys from a a single thread using
    asynchronous I/O (currently via poll()).

  * Changed the evql client to use the new native protocol

  * Changed the connection acceptor code to read the first byte of an incoming
    connection and switch protocols (currently HTTP and native) based on this
    first byte

  * Changed the http server code to execute incoming requests from within a
    database thread (previously this was a generic thread pool)

  * Changed the internal cluster auth to require all internal hosts to be
    whitelisted using the cluster.allowed_hosts option. In standalone mode,
    the whitelist is defaulted to 0.0.0.0/0

  * Changed the HTTP transport to run fully within the database thread (i.e.
    removed the dependency on an external event loop) and added http timeouts

  * Changed the SQL engine to use the new native transport

  * Changed the zookeeper backend to explicitly reconnect on session timeouts
    and not rely on the built-in reconnect mechanism

  * Removed the obsolete "sha1_tokens" field from the cluster/server config

  * Removed the PCRE dependency

  * Added a native transport layer (a framed TCP-based protocol). See