@@ -148,6 +148,12 @@ Binary Protocols.
     0x0103   QUERY_REMOTE
     0x0104   QUERY_REMOTE_RESULT
     0x0110   REPL_INSERT
+    0x0200   META_PERFORMOP
+    0x0201   META_CREATEFILE
+    0x0202   META_GETFILE
+    0x0203   META_DISCOVER
+    0x0204   META_LISTPARTITIONS
+    0x0205   META_FINDPARTITION
 
   Messages are described in Section 6.
 
